# omarchy-theme-gen

./: .gitignore  LICENSE  README.md  install.sh  reinstall.sh  uninstall.sh
Generator/: .gitignore  Cargo.toml  config.example.toml  custom_theme.example.json
Generator/src/: activator.rs  color.rs  config.rs  detector.rs  extractor.rs  generator.rs  linker.rs  main.rs  parser.rs  templates.rs  watcher.rs
Generator/templates/: omarcava.config  omarchify-colors.ini  omarclock.sh  omarcord.theme.css  omarvscode-package.json  omarvscode.json
Omarchify/text/: user.css
Omarcord/: README.md
Omarcord/theme/: omarcord.theme.css
