[package]
name = "omarchy-theme-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tera = "1.20"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11"
dirs = "5.0"
chrono = "0.4"
fs_extra = "1.3"

[dev-dependencies]
tempfile = "3.15"
